fix loading z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1589,7 +1589,7 @@ a {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 19;
   top: 0;
   left: 0;
   width: 100%;
